[package]
edition = "2021"
name = "megabit-coproc-embassy"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.5", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-nrf = { version = "0.1", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = "1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = 2